--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-qunit": ">=0.2.1",
     "grunt-contrib-watch": ">=0.3.1",
-    "qunitjs": "^1.14.0"
+    "qunitjs": "^1.14.0",
+    "grunt-contrib-jshint": "^0.9.2"
   },
   "description": "Setting up the test environment ===================================",
   "main": "Gruntfile.js",
