--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "grunt-contrib-qunit": ">=0.2.1",
     "grunt-contrib-watch": ">=0.3.1",
     "qunitjs": "^1.14.0",
-    "grunt-contrib-jshint": "^0.9.2"
+    "grunt-contrib-jshint": "^0.9.2",
+    "socket.io": "~0.9.16",
+    "msgpack": "0.2.2",
+    "hiredis": "0.1.16",
+    "grunt-browserify": "^1.3.2"
   },
   "description": "Setting up the test environment ===================================",
   "main": "Gruntfile.js",
