--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "socket.io": "~0.9.16",
     "msgpack": "0.2.2",
     "hiredis": "0.1.16",
-    "grunt-browserify": "^1.3.2"
+    "grunt-exec": ">=0.4.5",
+    "qunit": ">=0.6.2"
   },
   "description": "Setting up the test environment ===================================",
   "main": "Gruntfile.js",
